# solfedjio-project

./: Dockerfile  README.md  pyproject.toml
docker/: build.sh  help  install.sh  rebuild.sh  run.sh
src/solfedjio-project/: config.py  crud.py  main.py  models.py  router.py  schemas.py
src/solfedjio_project/: main.py
src/solfedjio_project/auth/: auth.py  manager.py
src/solfedjio_project/db/: crud.py  db_config.py  models.py
src/solfedjio_project/router/: level_router.py  stat_router.py  task_router.py
src/solfedjio_project/schema/: schemas.py
src/tests/: test_main.http
