[tool.poetry]
name = "solfedjio-project"
version = "0.1.0"
description = ""
authors = ["yontare"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
sqlalchemy = "^2.0.21"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
